# kino

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  kino.toml.example
.cargo/: config.toml
crates/kino/: Cargo.toml
crates/kino-admin/: Cargo.toml  build.rs
crates/kino-admin/src/: lib.rs
crates/kino-admin/tests/: assets.rs
crates/kino-admin/web/: .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
crates/kino-admin/web/src/: main.tsx  styles.css
crates/kino-admin/web/src/admin/: AdminHeader.tsx
crates/kino-admin/web/src/api/: client.ts  schema.test.ts
crates/kino-admin/web/src/auth/: AuthGate.tsx  LoginPage.tsx  token-store.test.ts  token-store.ts  use-token.ts
crates/kino-cli/: Cargo.toml
crates/kino-cli/src/: main.rs
crates/kino-core/: Cargo.toml
crates/kino-core/src/: catalog.rs  config.rs  device_token.rs  id.rs  identity.rs  lib.rs  pairing.rs  playback_session.rs  playback_state.rs  probe.rs  request.rs  time.rs  tracing.rs  user.rs
crates/kino-db/: Cargo.toml
crates/kino-db/migrations/: 0001_initial.sql  0002_request_status_events.sql  0003_request_list_index.sql  0004_request_model_fields.sql  0005_request_match_candidates.sql  0006_request_identity_versions.sql  0007_canonical_identities.sql  0008_request_fulfillment_plans.sql  0009_minimal_media_items.sql  0010_subtitle_sidecars.sql  0011_metadata_cache.sql  0012_source_files.sql  0013_core_catalog_schemas.sql  0014_users.sql  0015_device_tokens.sql  0016_playback_state.sql  0017_playback_sessions.sql  0018_subtitle_provenance.sql  0019_catalog_fts.sql  0020_metadata_artwork.sql  0021_subtitle_archive.sql  0022_watched_transitions.sql  0023_source_file_probe_data.sql  0023_subtitle_forced_flag.sql  0025_transcode_jobs.sql  0026_transcode_outputs_packaging.sql  0027_transcode_color_downgrades.sql  0028_ephemeral_transcodes.sql  0029_pairings.sql  0030_server_identity.sql
crates/kino-db/src/: lib.rs  pairings.rs  server_identity.rs
crates/kino-fulfillment/: Cargo.toml
crates/kino-fulfillment/src/: disc_rip.rs  ingestion.rs  lib.rs  manual_import.rs  movie.rs  planning.rs  probe.rs  provider.rs  request.rs  tmdb.rs  tv.rs  watch_folder.rs
crates/kino-fulfillment/src/request/: store.rs
crates/kino-fulfillment/tests/: probe_fixture.rs
crates/kino-fulfillment/tests/fixtures/: probe_sample.mkv
crates/kino-library/: Cargo.toml
crates/kino-library/src/: lib.rs  subtitle_image_extraction.rs  subtitle_ocr.rs  subtitle_reocr.rs
crates/kino-library/tests/: tesseract_ocr.rs
crates/kino-server/: Cargo.toml  openapi.json
crates/kino-server/src/: admin_config.rs  auth.rs  catalog_admin.rs  discover.rs  discovery.rs  ingestion_orchestrator.rs  lib.rs  openapi.rs  pairing.rs  pairing_reaper.rs  playback.rs  request.rs  session_admin.rs  session_reaper.rs  session_service.rs  stream.rs  token.rs  transcode_admin.rs  variant_select.rs  watch_folder_intake.rs
crates/kino-server/tests/: auth_middleware.rs  config_api.rs  cors.rs  phase_3_acceptance.rs  playback_api.rs  request_api.rs  session_admin_api.rs  stream_api.rs  token_api.rs  transcode_admin_api.rs
crates/kino-server/tests/common/: mod.rs
crates/kino-transcode/: Cargo.toml
crates/kino-transcode/src/: downgrade.rs  lib.rs  service.rs
crates/kino-transcode/src/encoder/: backend.rs  capabilities.rs  detect.rs  kind.rs  mod.rs  qsv.rs  registry.rs  software.rs  vaapi.rs  video.rs  videotoolbox.rs
crates/kino-transcode/src/encoder/snapshots/: kino_transcode__encoder__qsv__tests__snapshot_hdr10_hevc_preserve.snap  kino_transcode__encoder__qsv__tests__snapshot_hdr_to_sdr_tonemap.snap  kino_transcode__encoder__qsv__tests__snapshot_sdr_hevc.snap  kino_transcode__encoder__software__tests__snapshot_h264_8_bit_sdr_1080p_cmaf_vod.snap  kino_transcode__encoder__software__tests__snapshot_hdr10_4k_hevc_preserve_cmaf_vod.snap  kino_transcode__encoder__software__tests__snapshot_hdr_to_sdr_1080p_hevc_8_bit_tonemap_cmaf_vod.snap  kino_transcode__encoder__software__tests__snapshot_hevc_10_bit_sdr_1080p_cmaf_vod.snap  kino_transcode__encoder__vaapi__tests__snapshot_hdr10_hevc_preserve.snap  kino_transcode__encoder__vaapi__tests__snapshot_hdr_to_sdr_tonemap.snap  kino_transcode__encoder__vaapi__tests__snapshot_sdr_hevc.snap  kino_transcode__encoder__videotoolbox__tests__snapshot_hdr10_hevc_preserve.snap  kino_transcode__encoder__videotoolbox__tests__snapshot_hdr10_hevc_preserve_cmaf_vod.snap  kino_transcode__encoder__videotoolbox__tests__snapshot_hdr_to_sdr_hevc_1080p_tonemap_cmaf_vod.snap  kino_transcode__encoder__videotoolbox__tests__snapshot_hdr_to_sdr_tonemap.snap  kino_transcode__encoder__videotoolbox__tests__snapshot_sdr_hevc.snap  kino_transcode__encoder__videotoolbox__tests__snapshot_sdr_hevc_1080p_cmaf_vod.snap
crates/kino-transcode/src/ephemeral/: active.rs  eviction.rs  mod.rs  store.rs
crates/kino-transcode/src/job/: mod.rs  scheduler.rs  state.rs  store.rs
crates/kino-transcode/src/job/snapshots/: kino_transcode__job__scheduler__tests__snapshot_dv_original_copy_maps_all_streams_without_color_overrides.snap  kino_transcode__job__scheduler__tests__snapshot_hdr10_compatibility_reencode_tonemaps_to_sdr.snap  kino_transcode__job__scheduler__tests__snapshot_hdr10_high_reencode_preserves_hdr10_metadata.snap
crates/kino-transcode/src/pipeline/: ffmpeg.rs  mod.rs  runner.rs
crates/kino-transcode/src/pipeline/snapshots/: kino_transcode__pipeline__ffmpeg__tests__snapshot_copy_passthrough_maps_all_streams.snap  kino_transcode__pipeline__ffmpeg__tests__snapshot_hdr10_4k_hevc_preserve.snap  kino_transcode__pipeline__ffmpeg__tests__snapshot_hdr_to_sdr_1080p_tonemap.snap  kino_transcode__pipeline__ffmpeg__tests__snapshot_sdr_1080p_h264_aac_cmaf_software.snap  kino_transcode__pipeline__ffmpeg__tests__snapshot_sdr_1080p_hevc_10_bit_aac_cmaf.snap  (+1 more)
crates/kino-transcode/src/plan/: mod.rs  policy.rs  profile.rs  variant.rs  vmaf.rs
crates/kino-transcode/tests/: hwaccel.rs
crates/kino/src/: main.rs
(+82 files in other folders)
