[workspace]
members = [
    "crates/kino-core",
    "crates/kino-db",
    "crates/kino-fulfillment",
    "crates/kino-library",
    "crates/kino-transcode",
    "crates/kino-server",
    "crates/kino-admin",
    "crates/kino-cli",
    "crates/kino",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde-well-known", "macros"] }
figment = { version = "0.10", features = ["toml", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tempfile = "3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "migrate"] }
url = "2"

[workspace.lints.rust]
unsafe_code = "deny"
unused_imports = "warn"

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"
expect_used = "warn"
