[package]
name = "kino-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
