[package]
name = "kino-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
tempfile = { workspace = true }
