[package]
name = "kino-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
test-helpers = []

[dependencies]
kino-core = { path = "../kino-core" }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
