[package]
name = "kino-fulfillment"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
kino-transcode = { path = "../kino-transcode" }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
kino-db = { path = "../kino-db", features = ["test-helpers"] }
tokio = { workspace = true }
