[package]
name = "kino-fulfillment"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
kino-library = { path = "../kino-library" }
kino-transcode = { path = "../kino-transcode" }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
kino-db = { path = "../kino-db", features = ["test-helpers"] }
tempfile = { workspace = true }
tokio = { workspace = true }
