[package]
name = "kino-library"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
kino-db = { path = "../kino-db", features = ["test-helpers"] }
tempfile = { workspace = true }
