[package]
name = "kino-library"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
kino-db = { path = "../kino-db", features = ["test-helpers"] }
tempfile = { workspace = true }
