[package]
name = "kino-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8"
base64 = "0.22"
figment = { workspace = true }
kino-admin = { path = "../kino-admin" }
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
kino-fulfillment = { path = "../kino-fulfillment" }
kino-library = { path = "../kino-library" }
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10"
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }

[dev-dependencies]
oas3 = "0.22.0"
kino-db = { path = "../kino-db", features = ["test-helpers"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
