[package]
name = "kino-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
acceptance-tests = []

[dependencies]
axum = "0.8"
base64 = "0.22"
figment = { workspace = true }
kino-admin = { path = "../kino-admin" }
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
kino-fulfillment = { path = "../kino-fulfillment" }
kino-library = { path = "../kino-library" }
kino-transcode = { path = "../kino-transcode" }
rand = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }

[dev-dependencies]
kino-db = { path = "../kino-db", features = ["test-helpers"] }
m3u8-rs = "6.0.0"
oas3 = "0.22.0"
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
webvtt-parser = "1.0.0-beta.4-rc.5"
