[package]
name = "kino-transcode"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kino-core = { path = "../kino-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shell-words = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true }
