[package]
name = "kino-transcode"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kino-core = { path = "../kino-core" }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shell-words = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
