[package]
name = "kino-transcode"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
hwaccel-tests = []

[dependencies]
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
dashmap = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shell-words = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
kino-db = { path = "../kino-db", features = ["test-helpers"] }
tempfile = { workspace = true }
tokio = { workspace = true }
