[package]
name = "kino"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
kino-fulfillment = { path = "../kino-fulfillment" }
kino-library = { path = "../kino-library" }
kino-transcode = { path = "../kino-transcode" }
kino-server = { path = "../kino-server" }
kino-admin = { path = "../kino-admin" }
kino-cli = { path = "../kino-cli" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
