[package]
name = "kino"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = "0.22"
kino-core = { path = "../kino-core" }
kino-db = { path = "../kino-db" }
kino-fulfillment = { path = "../kino-fulfillment" }
kino-library = { path = "../kino-library" }
kino-transcode = { path = "../kino-transcode" }
kino-server = { path = "../kino-server" }
kino-admin = { path = "../kino-admin" }
kino-cli = { path = "../kino-cli" }
rand = "0.8"
sha2 = "0.10"
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
kino-db = { path = "../kino-db", features = ["test-helpers"] }
tempfile = { workspace = true }
